--- a/vizro-core/docs/stylesheets/extra.css
+++ b/vizro-core/docs/stylesheets/extra.css
@@ -62,3 +62,57 @@ td:not([class]):not(:last-child) {
   background-color: rgb(3, 3, 3);
   mask-image: var(--md-admonition-icon--details);
 }
+
+/*body {*/
+/*    font-family: Arial, sans-serif;*/
+/*    margin: 20px;*/
+/*}*/
+
+/*.tab-container {*/
+/*    border: 1px solid #ccc;*/
+/*    border-radius: 5px;*/
+/*    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+/*}*/
+
+/*.tab-buttons {*/
+/*    display: flex;*/
+/*    border-bottom: 1px solid #ccc;*/
+/*}*/
+
+/*.tab-buttons button {*/
+/*    background-color: #f1f1f1;*/
+/*    border: none;*/
+/*    padding: 10px 20px;*/
+/*    cursor: pointer;*/
+/*    font-size: 16px;*/
+/*}*/
+
+/*.tab-buttons button.active {*/
+/*    background-color: #ddd;*/
+/*    border-bottom: 2px solid #333;*/
+/*}*/
+
+/*.tab-content {*/
+/*    display: none;*/
+/*    padding: 20px;*/
+/*}*/
+
+/*.tab-content.active {*/
+/*    display: block;*/
+/*}*/
+
+.demo iframe {
+    width: 100%;
+    height: 800px;
+    max-width: 100%;
+    border: 0;
+}
+
+.footer {
+    /*margin-top: 10px;*/
+    /*padding: 10px;*/
+    background-color: transparent;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    text-align: center;
+}
