--- a/vizro-ai/examples/dashboard_ui/assets/custom_css.css
+++ b/vizro-ai/examples/dashboard_ui/assets/custom_css.css
@@ -22,11 +22,11 @@
   outline-width: 0;
 }
 
-#text-area-id {
+#dashboard-text-area {
   background-color: inherit;
   border: 1px solid var(--border-subtle-alpha-01);
   color: var(--text-primary);
-  min-height: 90px;
+  height: 400px;
   padding: 8px;
   width: 100%;
 }
@@ -45,8 +45,7 @@
 .code-clipboard-container {
   background: var(--surfaces-bg-card);
   font-family: monospace;
-  height: 500px;
-  max-height: 500px;
+  height: 100%;
   overflow: auto;
   padding: 1rem;
   position: relative;
@@ -82,6 +81,9 @@
 #trigger-button-id {
   width: 100%;
 }
+#dashboard-trigger-button {
+  width: 100%;
+}
 
 #dashboard-container .dash-dropdown {
   background-color: inherit;
@@ -96,6 +98,15 @@
 }
 
 .card:has(#upload-message-id) {
+  background-color: inherit;
+  box-shadow: none;
+  font-size: 12px;
+  overflow: hidden;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-top: 8px;
+}
+.card:has(#dashboard-upload-message-id) {
   background-color: inherit;
   box-shadow: none;
   font-size: 12px;
@@ -121,7 +132,8 @@
   width: 100%;
 }
 
-#data-upload-id {
+
+#dashboard-data-upload {
   border: 1px dashed var(--border-subtle-alpha-01);
   border-radius: 5px;
   color: var(--text-primary);
@@ -135,6 +147,14 @@
 }
 
 #settings-api-base-toggle .form-check-input {
+  border-radius: 8px;
+}
+
+#dashboard-settings-api-key-toggle .form-check-input {
+  border-radius: 8px;
+}
+
+#dashboard-settings-api-base-toggle .form-check-input {
   border-radius: 8px;
 }
 
